--- a/index.html
+++ b/index.html
@@ -64,20 +64,24 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="class" id="id" style="background:;">
+<slide class="" id="slide-2" style="background:;">
   <hgroup>
     <h2>Shiny App: Sleep</h2>
   </hgroup>
   <article data-timings="">
-    <div style='text-align: center;'>
-    <img height='300' src='Untitled.jpg' />
-</div>
+    <p>Sleep is every user&#39;s companion</p>
+
+<p>It helps to regulate the amount of sleep one should take by keeping track on the number of hours. </p>
+
+<p>Eg.
+On Wednesday, person A has only slept 10 hours since Monday
+Using SLeep, he would be able to know straightaway that he should be getting an avg of 10 hours of sleep for the rest of the week.</p>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="class" id="id" style="background:;">
+<slide class="" id="slide-3" style="background:;">
   <hgroup>
     <h2>Sleep: How it works</h2>
   </hgroup>
@@ -86,7 +90,7 @@
 
 <p>Calculation used in Sleep is based on the assumption that 8 hours of sleep each night gives optimal benefits </p>
 
-<p>hoursNeeded=frac{(56-hours)}{(7-days)}</p>
+<p>hoursNeeded=(56-hours)/(7-days)</p>
 
 <p>where</p>
 
@@ -98,7 +102,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="class" id="id" style="background:;">
+<slide class="" id="slide-4" style="background:;">
   <hgroup>
     <h2>Credits</h2>
   </hgroup>
@@ -110,13 +114,6 @@ Facilitator - Kai Xin</p>
 
 <p><a href="https://epepqep.shinyapps.io/Sleep/">https://epepqep.shinyapps.io/Sleep/</a></p>
 
-  </article>
-  <!-- Presenter Notes -->
-</slide>
-
-<slide class="class" id="id" style="background:;">
-  <article data-timings="">
-    
   </article>
   <!-- Presenter Notes -->
 </slide>
@@ -147,12 +144,6 @@ Facilitator - Kai Xin</p>
       <a href="#" target="_self" rel='tooltip' 
         data-slide=4 title='Credits'>
          4
-      </a>
-    </li>
-    <li>
-      <a href="#" target="_self" rel='tooltip' 
-        data-slide=5 title=''>
-         5
       </a>
     </li>
   </ul>
